--- a/style.css
+++ b/style.css
@@ -1,5 +1,14 @@
-body{
+*{
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+body, input, button, select, textarea{
   font-family: 'Poppins', sans-serif;
+}
+
+body{
   background: #e5e5e5;
 }
 
@@ -30,6 +39,7 @@ header h1{
   font-size: 36px;
   line-height: 42px;
   color: white;
+  margin-bottom: 24px;
 }
 
 header p{
@@ -58,4 +68,34 @@ fieldset legend{
   width: 100%;
   border-bottom: 1px solid #e6e6f0;
   padding-bottom: 16px;
+}
+
+.input-wrapper{
+  display: flex;
+  flex-direction: column;
+}
+
+.input-wrapper label{
+  font-size: 14px;
+  line-height: 24px;
+  color: #4e4958;
+  margin-bottom: 8px;
+}
+
+.input-wrapper label span{
+  margin-left: 12px;
+  font-size: 12px;
+  line-height: 20px;
+  color: #c1bccc;
+}
+
+.input-wrapper input{
+  background: #fafafc;
+  border: 1px solid #e6e6f0;
+  border-radius: 8px;
+  height: 56px;
+  padding: 0 24px;
+  font-size: 16px;
+  line-height: 26px;
+  color: #c1bccc;
 }
