--- a/style.css
+++ b/style.css
@@ -54,6 +54,9 @@ form{
   border-radius: 8px;
   min-height: 300px;
   padding: 64px;
+  display: flex;
+  flex-direction: column;
+  gap: 48px;
 }
 
 fieldset{
@@ -99,7 +102,9 @@ fieldset legend{
   color: #6c6a71;
 }
 
-.input-wrapper input, .input-wrapper textarea{
+.input-wrapper input, 
+.input-wrapper textarea, 
+.input-wrapper select{
   background: #fafafc;
   border: 1px solid #e6e6f0;
   border-radius: 8px;
@@ -113,4 +118,21 @@ fieldset legend{
 .input-wrapper textarea{
   padding: 0;
   height: 168px;
+}
+
+.input-wrapper select{
+  appearance: none;
+  -webkit-appearance: none;
+  background-image: url("data:image/svg+xml,%3Csvg width='10' height='6' viewBox='0 0 10 6' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M1 1L5 5L9 1' stroke='%239C98A6' stroke-width='1.5' stroke-linecap='round' stroke-linejoin='round'/%3E%3C/svg%3E%0A");
+  background-repeat: no-repeat;
+  background-position: right 24px top 50%;
+}
+
+.col-3{
+  display: flex;
+  gap: 20px;
+}
+
+.col-3 > div:nth-child(1){
+  width: 100%;
 }
